K8/Namespace-resouce-q-def.yaml
apiVersion: v1
kind: Namespace
metaData:
  name: ingress-space
  labels:
    name: ingress-space
