K8/Deployment-Httpd.def.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      name: httpd-container
  template:
    metadata:
      labels:
        name: httpd-container
    spec:
      containers:
        - name: httpd-container
          image: httpd:2.4-alpine
          command:
          - sh
          - "-c"
          - echo hello K8! sleep 3600
