K8/Deployment-mysql.def.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: wordpress
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      name: wordpress
      labels:
        app: wordpress
        tier: database
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-persistent-storage
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-persistent-storage
  selector:
    matchLabels:
      app: wordpress
      tier: database
