K8/Deployment-wordpress.def.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  replicas: 2
  strategy:
    type: Recreate
  template:
    metadata:
      name: wordpress
      labels:
        app: wordpress
        tier: ui
    spec:
      containers:
      - name: wordpress
        image: wordpress
        ports:
          - containerPort: 80
            name: wordpress
        volumeMounts:
          - mountPath: /var/www/html
            name: wordpress-persistent-storage
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wordpress-persistent-storage
  selector:
    matchLabels:
      app: wordpress
      tier: ui
