K8/Multi-Container-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: Nginx
  labels:
    app: Application server
spec:
  containers:
    - name: nginx-container
      image: nginx
    - name: reactUi
      image: customer-Ui
