K8/Nginx-pod-definition.yml
apiVersion: v1
kind: Pod
metadata:
  name: Nginx
  labels:
    app: Application server
spec:
  containers:
    - name: nginx-container
      image: nginx
