K8/PodWith-Volume-def.yaml
apiVersion: v1
kind: Pod
metadata:
  name: user-service-pod
  labels:
    app: user-microservice
    purpose: Horizontal scale
spec:
  containers:
    - name: kubernetes-setup-service
      image: kubernetes-setup-service/demo:latest
  volumes:
    - name: mypd
      persistentVolumeClaim:
        claimNmae: myclaim
