K8/pod-definition.yml
apiVersion: v1
kind: Pod
metadata:
  name: messaging
  labels:
    app: messaging
    tier: msg
spec:
  containers:
    - name: redis
      image: redis:alpine
