K8/Ingress-service-def.yaml
apiVersion: v1
kind: Service
metaData:
  name: nginx-ingress
spec:
  type: NodePort
  ports:
    - targetPort: 80
      port: 80
      portocol: TCP
      name: http
    - port: 443
      targetport: 443
      protocol: TCP
      name: https
  selector:
    name: nginx-ingress
