K8/Nodeport-servicep-def.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 31004
  selector:
    app: wordpress
    tier: ui
