K8/clusterIP-service-definition.yaml
apiVersion: v1
kind: Service
metaData:
  name: wordpress-mysql
  labels:
    app: wordpress
spec:
  type: ClusterIP
  ports:
    - port: 3306
  selector:
    app: wordpress
    tier: database
  clusterIP: None
