K8/service-definition.yaml
apiVersion: v1
kind: Service
metaData:
  name: myapp-service
spec:
  type: NodePort
  ports:
    - targetPort: 80
      port: 80
      nodePort: 30008

  selector:
    app: myApp
    type: front-end
