K8/networkpolicy-egress-def.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metaData:
  name: internal-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: internal
  policyTypes:
    - Ingress
    - egress
  ingress:
    - {}
  egress:
  - to:
    - podSelector:
        matchLables:
          name: mysql
    ports:
    - protocol: TCP
      port: 3306
  - to:
    - podSelector:
        matchLabels:
          name: payroll
    ports:
    - protocol: TCP
      port: 8080
