K8/networkpolicy-ingress-def.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metaData:
  name: db-polciy
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLables:
              name: api-pod
        ports:
        - protocol: TCP
          port: 3306
